# cpp-glslang-sample

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  makefile
doc/: glslang.md  machineIndependent.md  spirv.md
src/: main.cpp
